--- a/full-stack.html
+++ b/full-stack.html
@@ -54,11 +54,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://productsup.join.com/jobs/266046-php-full-stack-developer-m-f-d'>Job @ Productsup (Berlin): PHP Full-Stack Develope... | JOIN</a></h5> 
+<h5><a href='https://productsup.join.com/jobs/266046-php-full-stack-developer-m-f-d'>Job @ Productsup (Berlin): PHP Full-Stack Develope... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caseware.workable.com/j/14E0C2A6F5'>CaseWare - Jobs: Full-Stack Developer - Innovation - Apply online</a></h5> 
+<h5><a href='https://caseware.workable.com/j/14E0C2A6F5'>CaseWare - Jobs: Full-Stack Developer - Innovation - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -98,11 +98,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/efront/1caf7064-9f66-4896-8db2-1ba301bb2cd3'>eFront - Full Stack Developer (eFront Insight)</a></h5> 
+<h5><a href='https://jobs.lever.co/efront/1caf7064-9f66-4896-8db2-1ba301bb2cd3'>eFront - Full Stack Developer (eFront Insight)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999692194360-software-engineer-qa-full-stack-javascript-'>K4Connect Software Engineer - QA (Full Stack JavaScript) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999692194360-software-engineer-qa-full-stack-javascript-'>K4Connect Software Engineer - QA (Full Stack JavaScript) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -131,7 +131,7 @@ generation web and mobile components and interfaces. Design and build a?...</p>
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='https://innogy.join.com/jobs/251568-full-stack-engineer-m-f-d-for-calipsa'>Job @ innogy Innovation Hub (London): Full Stack E... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://innogy.join.com/jobs/251568-full-stack-engineer-m-f-d-for-calipsa'>Job @ innogy Innovation Hub (London): Full Stack E... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -224,7 +224,7 @@ Stack Developer to join our digital delivery team as they build a solution for a
 <p>Jul 14, 2019 ... Express your creativity in Developer Choice competitions, with the opportunity to 
 win prizes and recognition from your peers. Required Qualifications: Minimum 3?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Hifield/743999692241631-developpeur-fullstack-php-h-f'>Hifield D?veloppeur FullStack PHP H/F | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Hifield/743999692241631-developpeur-fullstack-php-h-f'>Hifield D?veloppeur FullStack PHP H/F | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -238,7 +238,7 @@ win prizes and recognition from your peers. Required Qualifications: Minimum 3?.
 <p><span class="badge badge-light">Vancouver Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4317023002'>Job Application for Full Stack Engineer  at Globality, Inc.</a></h5> 
+<h5><a href='https://boards.greenhouse.io/globalityinc/jobs/4317023002'>Job Application for Full Stack Engineer  at Globality, Inc.</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -399,7 +399,7 @@ the job details and apply today!</p>
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Bynder1/743999692146434-full-stack-software-engineer-php'>Bynder Full Stack Software Engineer - PHP | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Bynder1/743999692146434-full-stack-software-engineer-php'>Bynder Full Stack Software Engineer - PHP | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -408,7 +408,7 @@ the job details and apply today!</p>
 <p>1 day ago ... Apply online for the job of Senior Back End Java Developer (Full Stack) at Youtap 
 Limited.</p>
 <hr/>
-<h5><a href='https://food52.workable.com/jobs/1051098'>Food52 - Jobs: Full Stack Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://food52.workable.com/jobs/1051098'>Food52 - Jobs: Full Stack Developer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... Apply online for the job of Full Stack Developer at Food52.</p>
 <hr/>
@@ -428,7 +428,7 @@ Limited.</p>
 machine learning engineers, to craft and implement new product features. You 
 also?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/webmd/job/ohlwafw2'>WebMD Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ohlwafw2'>WebMD Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... WebMD is searching for a Full Stack Developer. This person will collaborate with 
 a full team of technology professionals to take projects from design specs to?...</p>
@@ -438,7 +438,7 @@ a full team of technology professionals to take projects from design specs to?..
 <p>3 days ago ... Full Stack Developer. Job ID 2019-1565. Technology New York, New York. Apply
 . Description. Medscape, a division of WebMD, develops and hosts physician?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/csajobs/job/oU9zafww'>Community Services of America Careers - Full Stack Web Developer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/csajobs/job/oU9zafww'>Community Services of America Careers - Full Stack Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Join a stable, growing business with more than 50 years of sustained success. As 
 a   Full Stack Developer   for Saint Benedict Press, you will collaborate on,?...</p>
