--- a/web-developer.html
+++ b/web-developer.html
@@ -96,7 +96,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/NationalSoftwareManagement1/85553942-entry-level-web-developer'>National Software Management Entry level Web Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/NationalSoftwareManagement1/85553942-entry-level-web-developer'>National Software Management Entry level Web Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -122,7 +122,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/helbiz/1c635ef7-5a3c-4265-8c7b-cec2bc0a93c6'>Helbiz Inc. - Back-End Web Developer - New York City</a></h5> 
+<h5><a href='https://jobs.lever.co/helbiz/1c635ef7-5a3c-4265-8c7b-cec2bc0a93c6'>Helbiz Inc. - Back-End Web Developer - New York City</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -146,7 +146,7 @@ M?nster (published: 11.01.2019). Apply now or check the other available jobs.</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://talpasolutions.join.com/jobs/257004-web-developer-front-end'>Job @ talpasolutions (Essen): Web Developer (Front... | JOIN</a></h5> 
+<h5><a href='https://talpasolutions.join.com/jobs/257004-web-developer-front-end'>Job @ talpasolutions (Essen): Web Developer (Front... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -197,7 +197,7 @@ Rails) to stabilize and expand our AI platform. AIcrowd (www.aicrowd.com) is a?.
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on:: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/stars-group/job/ocRzafww'>The Stars Group Careers - Web Developer (Web Poker)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/stars-group/job/ocRzafww'>The Stars Group Careers - Web Developer (Web Poker)</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -245,7 +245,7 @@ published: 19.07.2019). Apply now or check the other available jobs.</p>
 <p>2 days ago ... WebMD is searching for a Full Stack Developer. This person will collaborate with 
 a full team of technology professionals to take projects from design specs to?...</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/webmd/job/ox9xafw7'>WebMD Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/webmd/job/ox9xafw7'>WebMD Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>3 days ago ... Full Stack Developer. Job ID 2019-1565. Technology New York, New York. Apply
 . Description. Medscape, a division of WebMD, develops and hosts physician?...</p>
@@ -270,7 +270,7 @@ a   Full Stack Developer   for Saint Benedict Press, you will collaborate on,?..
 <p>Jul 11, 2019 ... ... filters, and tokenizers to change the way that data is indexed and queried; 
 researches configuration of Solr search engines and the Solr query language.</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LeikirWeb/743999692098264-stage-ruby-on-rails-developer'>Leikir Web Stage Ruby on Rails Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LeikirWeb/743999692098264-stage-ruby-on-rails-developer'>Leikir Web Stage Ruby on Rails Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -296,7 +296,7 @@ researches configuration of Solr search engines and the Solr query language.</p>
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/bixal/70aca1df-d3cf-452b-a38b-02a2dc9ae005'>Bixal - Drupal Web Developer (Mid to Senior Level)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/bixal/70aca1df-d3cf-452b-a38b-02a2dc9ae005'>Bixal - Drupal Web Developer (Mid to Senior Level)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -335,7 +335,7 @@ Web Developer to join our busy and dynamic team based in our Dublin service?...<
 <p><span class="badge badge-light">Bangalore</span></p>
 <p>Posted on:: 2019-07-20</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692042525-web-developer-with-nodejs'>Prospect Infosys Inc. Web Developer with NodeJS | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ProspectInfosysInc/743999692042525-web-developer-with-nodejs'>Prospect Infosys Inc. Web Developer with NodeJS | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -445,7 +445,7 @@ job. Aircall's mission is to transform the business phone industry! Aircall is a
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/the-institutes/job/oeazafwR'>The Institutes Careers - Lead Web Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/the-institutes/job/oeazafwR'>The Institutes Careers - Lead Web Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
